学生管理主页修改

--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -318,9 +318,9 @@
 					time2:'2018-8-18',
 					data2:'王老师',
 					record:'2018-8-18',
-					gradelist:[ {value: '1',text: '全部年级',children: [{value: "10",text: "全部班级",children:[{value:'1',text:'全部学生'}]}]},
-						   {value: '2',text: '初中一年级',children:[{value:"10",text:"全部班级",children:[{value:'1',text:'全部学生'}]},{value: "11",text: "10111班",children:[{value:'1',text:'全部学生'},{value:'2',text:'张三'},{value:'3',text:'李四'}]},{value: "12",text: "10112班",children:[{value:'1',text:'全部学生'},{value:'2',text:'张五'},{value:'3',text:'李六'}]}]},
-						   {value: '3',text: '初中二年级',children:[{value:"10",text:"全部班级",children:[{value:'1',text:'全部学生'}]},{value: "11",text: "20221班",children:[{value:'1',text:'全部学生'},{value:'2',text:'张三'},{value:'3',text:'李四'}]},{value: "12",text: "20222班",children:[{value:'1',text:'全部学生'},{value:'2',text:'张五'},{value:'3',text:'李六'}]}]}
+					gradelist:[ {value: "1",text: "全部年级",children: [{value: "10",text: "全部班级",children:[{value:"1",text:"全部学生"}]}]},
+						   {value: "2",text: "初中一年级",children:[{value:"10",text:"全部班级",children:[{value:"1",text:"全部学生"}]},{value: "11",text: "10111班",children:[{value:"1",text:"全部学生"},{value:"2",text:"张三"},{value:"3",text:"李四"}]},{value: "12",text: "10112班",children:[{value:"1",text:"全部学生"},{value:"2",text:"张五"},{value:"3",text:"李六"}]}]},
+						   {value: "3",text: "初中二年级",children:[{value:"10",text:"全部班级",children:[{value:"1",text:"全部学生"}]},{value: "11",text: "20221班",children:[{value:"1",text:"全部学生"},{value:"2",text:"张三"},{value:"3",text:"李四"}]},{value: "12",text: "20222班",children:[{value:"1",text:"全部学生"},{value:"2",text:"张五"},{value:"3",text:"李六"}]}]}
 						 ],
 					actionList:[{value: '1',text: '吃饭'},
 							{value: '2',text: '睡觉'},
