--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -1,127 +1,203 @@
 <!doctype html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../../css/mui.min.css" rel="stylesheet" />
-    <style>
-        .mui-table-view-cell>a:not(.mui-btn) {
-            position: relative;
-            display: block;
-            overflow: hidden;
-            margin: -11px -15px;
-            padding: inherit;
-            white-space: normal;
-            text-overflow: ellipsis;
-            color: inherit;
-        }
-		.pClass{
-			font-size: 13px;
-			color: blue;
-		}
-		.liTitle{
-			font-size: 15px;
-			color: #333;
-		}
-		.liDetail{
-			font-size: 14px;
-			color: #666;
-		}
-		.lineCell{
-			height: px;
-			background: #f2f2f2;
-		}
-    </style>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<style>
+			.mui-table-view-cell>a:not(.mui-btn) {
+				position: relative;
+				display: block;
+				overflow: hidden;
+				margin: -11px -15px;
+				padding: inherit;
+				white-space: normal;
+				text-overflow: ellipsis;
+				color: inherit;
+			}
+			
+			.pClass {
+				font-size: 13px;
+				color: blue;
+			}
+			
+			.liTitle {
+				font-size: 15px;
+				color: #333;
+			}
+			
+			.liDetail {
+				font-size: 14px;
+				color: #666;
+			}
+			
+			.lineCell {
+				height: 10px;
+				width: 100%;
+				background: #f2f2f2;
+			}
+		</style>
+	</head>
 
-<body>
-    <header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="talkReacordHead">
-        <a @tap="muiback" class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back" style="color: white;"></a>
-        <h1 class="mui-title" style="color: white;">考勤详情</h1>
-        <a class="mui-pull-right" style="color: white;font-size: 14px;margin-top: 12px;">修改</a>
-    </header>
-    <div class="mui-content" id="attendanceDetialData">
-        <ul class="mui-table-view">
-            <li class="mui-table-view-cell" v-for='(attendanceModel,index) in actionDetialArray'>
-                <a v-if='index==4'>
-                    <div class="mui-media-body liTitle">
-                        {{attendanceModel.attendanceDetialTitle}}
-                    </div>
-                    <p class="liDetail" style="margin-top: 5px;padding: 5px 5px 5px;">{{attendanceModel.attendanceDetialValue}}</p>
-                </a>
-                <a v-else=''>
-                    <p class="mui-pull-right liDetail">{{attendanceModel.attendanceDetialValue}}</p>
-                    <div class="mui-media-body liTitle">
-                        {{attendanceModel.attendanceDetialTitle}}
-                    </div>
-                </a>
-                <a class="lineCell" v-if='index==2||index==4||index==6' style="margin-top: 13px;"></a>
-            </li>
-        </ul>
-    </div>
-    <script src="../../js/mui.js"></script>
-    <script src="../../js/vue.min.js"></script>
-    <script src='../../js/lib/vconsole/vconsole.min.js'></script>
-    <script src="../../js/publicProtocol.js"></script>
-    <script src="../../js/utils/store.js"></script>
-    <script src="../../js/utils/storageKeyName.js"></script>
-    <script src="../../js/utils/events.js"></script>
-    <script type="text/javascript" src="../../js/publicProtocol.js"></script>
-    <script src="../../js/utils/utils.js"></script>
-    <script src="../../js/lib/jquery.js"></script>
-    <script type="text/javascript">
-        mui.init()
-        var attendanceDetialData = new Vue({
-            el: "#attendanceDetialData",
-            data: {
-                actionDetialArray: [{
-                    attendanceDetialTitle: '年级',
-                    attendanceDetialValue: '五年级'
-                }, {
-                    attendanceDetialTitle: '班级',
-                    attendanceDetialValue: '1801'
-                }, {
-                    attendanceDetialTitle: '姓名',
-                    attendanceDetialValue: '王大陆'
-                }, {
-                    attendanceDetialTitle: '考勤细项',
-                    attendanceDetialValue: '请假'
-                }, {
-                    attendanceDetialTitle: '考勤说明',
-                    attendanceDetialValue: '上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲上课不认真听讲'
-                }, {
-                    attendanceDetialTitle: '考勤日期',
-                    attendanceDetialValue: '2018-6-20'
-                }, {
-                    attendanceDetialTitle: '节次',
-                    attendanceDetialValue: '全天'
-                }, {
-                    attendanceDetialTitle: '出入权限',
-                    attendanceDetialValue: '可离校'
-                }, {
-                    attendanceDetialTitle: '离校时间',
-                    attendanceDetialValue: '2018-6-20 8：00'
-                }, {
-                    attendanceDetialTitle: '回校时间',
-                    attendanceDetialValue: '2018-6-20 18：00'
-                }, {
-                    attendanceDetialTitle: '记录人',
-                    attendanceDetialValue: '宋老师'
-                }, {
-                    attendanceDetialTitle: '记录时间',
-                    attendanceDetialValue: '2018-6-20'
-                }]
-            },
-            methods: {
-                clickPop: function (model) {
-                    console.log('clickPop:' + JSON.stringify(model));
-                    mui('#topPopover').popover('hide');
-                }
-            }
-        });
-    </script>
-</body>
+	<body>
+		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="talkReacordHead">
+			<a @tap="muiback" class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back" style="color: white;"></a>
+			<h1 class="mui-title" style="color: white;">考勤详情</h1>
+			<a class="mui-pull-right" style="color: white;font-size: 14px;margin-top: 12px;">修改</a>
+		</header>
+		<div class="mui-content" id="attendanceDetialData">
+			<ul class="mui-table-view" v-if="dataFlag == 1">
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.gradeName}}</p>
+						<div class="mui-media-body liTitle">
+							年级
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.className}}</p>
+						<div class="mui-media-body liTitle">
+							班级
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.stuName}}</p>
+						<div class="mui-media-body liTitle">
+							姓名
+						</div>
+					</a>
+				</li>
+				<p class="lineCell"></p>
+				<li class="mui-table-view-cell" style="margin-top: -10px;">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.attendanceName}}</p>
+						<div class="mui-media-body liTitle">
+							考勤细项
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<div class="mui-media-body liTitle">
+							考勤说明
+						</div>
+						<p class="liDetail" style="margin-top: 5px;padding: 5px 5px 5px;">{{attendanceDetail.explain}}</p>
+					</a>
+				</li>
+				<p class="lineCell"></p>
+				<li class="mui-table-view-cell" style="margin-top: -10px;">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.attendanceTime}}</p>
+						<div class="mui-media-body liTitle">
+							考勤日期
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.period}}</p>
+						<div class="mui-media-body liTitle">
+							节次
+						</div>
+					</a>
+				</li>
+				<p class="lineCell"></p>
+				<li class="mui-table-view-cell" style="margin-top: -10px;" v-if="attendanceDetail.quantizationAttendanceId==12">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.permision}}</p>
+						<div class="mui-media-body liTitle">
+							出入权限
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" v-if="attendanceDetail.outsidePermisionCode=='outSchool'">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.leaveSchoolTime}}</p>
+						<div class="mui-media-body liTitle">
+							离校时间
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell" v-if="attendanceDetail.outsidePermisionCode=='outSchool'">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.backSchoolTime}}</p>
+						<div class="mui-media-body liTitle">
+							回校时间
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.recorder}}</p>
+						<div class="mui-media-body liTitle">
+							记录人
+						</div>
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a>
+						<p class="mui-pull-right liDetail">{{attendanceDetail.recordTime}}</p>
+						<div class="mui-media-body liTitle">
+							记录时间
+						</div>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<script src="../../js/mui.js"></script>
+		<script src="../../js/vue.min.js"></script>
+		<script src='../../js/lib/vconsole/vconsole.min.js'></script>
+		<script src="../../js/utils/store.js"></script>
+		<script src="../../js/utils/storageKeyName.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/lib/jquery.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript">
+			mui.init();
+			var curPage = {};
+			mui.plusReady(function() {
+				curPage = utils.getDataFromUrl(window.location.href);
+				console.log('2222:' + JSON.stringify(curPage));
+				getAttendanceDetailP();
+			});
+			var getAttendanceDetailP = function() {
+				var tempData = {
+					id: curPage.id
+				}
+				getAttendanceDetail(tempData, function funcName(data) {
+					console.log('data:' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						attendanceDetialData.attendanceDetail = data.RspData.sa;
+						//合并对象
+						attendanceDetialData.attendanceDetail = $.extend(attendanceDetialData.attendanceDetail, curPage);
+						console.log('attendanceDetialData.attendanceDetail:'+JSON.stringify(attendanceDetialData.attendanceDetail));
+						attendanceDetialData.dataFlag = 1;
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+			var attendanceDetialData = new Vue({
+				el: "#attendanceDetialData",
+				data: {
+					dataFlag : 0,
+					attendanceDetail: {}
+				},
+				methods: {
+//					clickPop: function(model) {
+//						console.log('clickPop:' + JSON.stringify(model));
+//						mui('#topPopover').popover('hide');
+//					}
+				}
+			});
+		</script>
+	</body>
 
 </html>
